2018-05-15  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_units): Print unit type and id for any
	unit type that has it even when version < 5.

2018-05-14  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_ops): Handle DW_OP_GNU_addr_index and
	DW_OP_GNU_const_index.
	(attr_callback): Handle DW_FORM_GNU_addr_index as DW_FORM_addrx.
	Handle DW_FORM_GNU_str_index as DW_FORM_constx. Add as_hex_id.
	Handle DW_AT_GNU_dwo_id as_hex_id.
	(print_form_data): Handle DW_FORM_GNU_str_index as DW_FORM_strx.

2018-05-12  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug): Also recognize .dwo section name variants.

2018-05-15  Dmitry V. Levin  <ldv@altlinux.org>

	* elflint.c (check_elf_header): Fix typo in error diagnostics.

2018-05-15  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_form_data): Cast comparisons against offset_len to
	ptrdiff_t.
	(print_debug_line_section): Print uint64_t as PRIu64.

2018-05-11  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_macro_section): Use libdw_valid_user_form.
	Use print_form_data for strx and sup strings.

2018-05-09  Mark Wielaard  <mark@klomp.org>

	* readelf.c (dwarf_line_content_description_string): New function.
	(dwarf_line_content_description_name): Likewise.
	(print_bytes): Likewise.
	(print_form_data): Likewise. Based on code taken from...
	(print_debug_macro_section): ...here. Now calls print_form_data
	and str_offsets_base_off.
	(print_debug_line_section): Parse DWARF5 header, directory and file
	name tables.

2018-05-12  Mark Wielaard  <mark@klomp.org>

	* addr2line.c (main): Add fflush (stdout) after handle_address ()
	when reading from stdin.

2018-04-24  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_aranges_section): Try elf_rawdata if no
	sectiondata.
	(print_debug_ranges_section): Likewise.
	(print_debug_frame_section): Likewise.
	(print_debug_line_section): Likewise. Check for data == NULL.
	(print_debug_loc_section): Likewise.